[package]
name = "csv-plotter"
version = "0.1.1"
authors = ["Giacomo Rizzi <gufoes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2={version="0.*", features=["ttf"]}
# csv="1.1"
logwatcher="0.1"
clap = "3.0.0-beta.2"
