[package]
name = "csv-plotter"
version = "0.1.2"
authors = ["Giacomo Rizzi <gufoes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2={version="0.*", features=["ttf"]}
# csv="1.1"
logwatcher="0.1"
chrono = "0.4"
structopt = { version = "0.3", default-features = false }
